fixed layout issues in desktop and 4k (2560px), optimised code

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -15,7 +15,7 @@ $font-stack: "Bai Jamjuree", sans-serif;
 $line-height-base: 1.75;
 
 // Font Sizes //
-$fs-base: 1.125rem; // ~18px
+$fs-base: 1.125rem; // ~18px, base body font-size from style guide
 $fs-h1-desktop: 2.375rem;
 $fs-h1-mobile: 2rem;
 $fs-h2-desktop: 2.25rem;
@@ -48,14 +48,15 @@ $space-9xl: 12rem;
 
 $gap-space: 0.3rem; // Gap equivalent to a " "
 $gap-3-5: 3.5rem;
-$header-p-space: 0.9rem;
+$header-p-space: 0.9rem; // Gap for header paragraph to force next line
+$screen4k-footer-padding: 30rem; // Horizontal padding fix footer nav placement
 
 // Layout
 $header-width: 34rem;
+$header-mask-stop: 85%;
 $container-width-sm: 20rem;
 $container-width-2sm: 23rem;
 $container-width-md: 24.875rem;
 $container-width-2md: 28rem;
 $container-width-lg: 38rem;
 $container-width-xl: 40rem;
-$header-mask-stop: 85%;
